--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: DevOps CI/CD Pipeline
 
 on:
   push:
-    branches: [ k8s ]
+    branches: [k8s]
   pull_request:
-    branches: [ k8s ]
+    branches: [k8s]
   workflow_dispatch:
 
 jobs:
@@ -16,6 +16,7 @@ jobs:
     defaults:
       run:
         working-directory: Backend
+
     steps:
       - uses: actions/checkout@v4
 
@@ -40,6 +41,7 @@ jobs:
         working-directory: Frontend
     env:
       CI: true
+
     steps:
       - uses: actions/checkout@v4
 
@@ -50,7 +52,7 @@ jobs:
           cache-dependency-path: Frontend/package-lock.json
 
       - name: Fix permissions for Frontend folder (unit tests)
-        run: sudo chown -R $USER:$USER .
+        run: sudo chown -R "$USER:$USER" .
 
       - name: Install & Test Frontend (Vitest)
         run: |
@@ -62,7 +64,8 @@ jobs:
   # =========================
   docker-backend:
     runs-on: ubuntu-latest
-    needs: [ backend-test ]
+    needs: [backend-test]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -86,7 +89,8 @@ jobs:
   # =========================
   docker-frontend:
     runs-on: ubuntu-latest
-    needs: [ frontend-test ]
+    needs: [frontend-test]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -106,12 +110,13 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress
+  # E2E + Cypress (รันแต่ไม่ทำให้ workflow fail)
   # =========================
   e2e:
     runs-on: ubuntu-latest
-    needs: [ docker-backend, docker-frontend ]
-    continue-on-error: true
+    needs: [docker-backend, docker-frontend]
+    continue-on-error: true   # ยังให้ Cypress fail ได้ แต่ไม่พังทั้ง workflow
+
     env:
       BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
       FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
@@ -121,7 +126,7 @@ jobs:
 
       - name: Create docker-compose.override.yml
         run: |
-          cat > docker-compose.override.yml << EOF
+          cat > docker-compose.override.yml << 'EOF'
           services:
             backend:
               image: ${BACKEND_IMAGE}
@@ -133,8 +138,7 @@ jobs:
               ports:
                 - "5173:5173"
               environment:
-                - VITE_API_URL=http://backend:8080
-              volumes: []
+                VITE_API_URL: http://backend:8080
           EOF
 
       - name: Start services
@@ -182,7 +186,7 @@ jobs:
 
       - name: Fix permissions for Frontend folder (e2e)
         working-directory: Frontend
-        run: sudo chown -R $USER:$USER .
+        run: sudo chown -R "$USER:$USER" .
 
       - name: Install dependencies + Cypress
         working-directory: Frontend
@@ -191,9 +195,9 @@ jobs:
           npx cypress install
 
       # =========================
-      # Run ONLY A0-e2e.cy.js
+      # Run only A2–A4, C1–C6
       # =========================
-      - name: Run Cypress (A0-e2e only)
+      - name: Run Cypress (only stable specs)
         working-directory: Frontend
         run: |
           npx cypress run --headless \
