--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: DevOps CI/CD Pipeline
 
 on:
   push:
-    branches: [k8s]
+    branches: [ Ham-fix-pipeline ]
   pull_request:
-    branches: [k8s]
+    branches: [ Ham-fix-pipeline ]
   workflow_dispatch:
 
 jobs:
@@ -16,7 +16,6 @@ jobs:
     defaults:
       run:
         working-directory: Backend
-
     steps:
       - uses: actions/checkout@v4
 
@@ -41,7 +40,7 @@ jobs:
         working-directory: Frontend
     env:
       CI: true
-
+      CYPRESS_INSTALL_BINARY: 0
     steps:
       - uses: actions/checkout@v4
 
@@ -51,10 +50,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: Frontend/package-lock.json
 
-      - name: Fix permissions for Frontend folder (unit tests)
-        run: sudo chown -R "$USER:$USER" .
-
-      - name: Install & Test Frontend (Vitest)
+      - name: Install & Test Frontend
         run: |
           npm ci
           npm run test --if-present
@@ -64,8 +60,9 @@ jobs:
   # =========================
   docker-backend:
     runs-on: ubuntu-latest
-    needs: [backend-test]
-
+    needs: [ backend-test ]
+    env:
+      IMAGE_NAME: 1tsh4dowz/devops-backend
     steps:
       - uses: actions/checkout@v4
 
@@ -81,16 +78,17 @@ jobs:
           context: ./Backend
           push: true
           tags: |
-            1tsh4dowz/devops-backend:${{ github.sha }}
-            1tsh4dowz/devops-backend:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.IMAGE_NAME }}:latest
 
   # =========================
   # Build & Push Frontend Image
   # =========================
   docker-frontend:
     runs-on: ubuntu-latest
-    needs: [frontend-test]
-
+    needs: [ frontend-test ]
+    env:
+      IMAGE_NAME: 1tsh4dowz/devops-frontend
     steps:
       - uses: actions/checkout@v4
 
@@ -106,17 +104,15 @@ jobs:
           context: ./Frontend
           push: true
           tags: |
-            1tsh4dowz/devops-frontend:${{ github.sha }}
-            1tsh4dowz/devops-frontend:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.IMAGE_NAME }}:latest
 
   # =========================
-  # E2E + Cypress (รันแต่ไม่ทำให้ workflow fail)
+  # E2E via Cypress + docker compose
   # =========================
   e2e:
     runs-on: ubuntu-latest
-    needs: [docker-backend, docker-frontend]
-    continue-on-error: true   # ยังให้ Cypress fail ได้ แต่ไม่พังทั้ง workflow
-
+    needs: [ docker-backend, docker-frontend ]
     env:
       BACKEND_IMAGE: 1tsh4dowz/devops-backend:latest
       FRONTEND_IMAGE: 1tsh4dowz/devops-frontend:latest
@@ -126,7 +122,7 @@ jobs:
 
       - name: Create docker-compose.override.yml
         run: |
-          cat > docker-compose.override.yml << 'EOF'
+          cat > docker-compose.override.yml << EOF
           services:
             backend:
               image: ${BACKEND_IMAGE}
@@ -138,37 +134,29 @@ jobs:
               ports:
                 - "5173:5173"
               environment:
-                VITE_API_URL: http://backend:8080
+                - VITE_API_URL=http://backend:8080
           EOF
 
       - name: Start services
         run: docker compose up -d
 
-      - name: Wait for backend
+      - name: Wait for backend (8080)
         run: |
           for i in {1..60}; do
-            if curl -fsS http://localhost:8080/actuator/health > /dev/null; then
-              echo "Backend is healthy ✅"
-              exit 0
-            fi
-            echo "Waiting for backend..."
+            curl -fsS http://localhost:8080/actuator/health && exit 0
             sleep 2
           done
-          echo "Backend did not become healthy in time ❌" >&2
+          echo "Backend did not become healthy in time" >&2
           docker compose logs backend || true
           exit 1
 
-      - name: Wait for frontend
+      - name: Wait for frontend (5173)
         run: |
           for i in {1..60}; do
-            if curl -fsS http://localhost:5173 > /dev/null; then
-              echo "Frontend is responding ✅"
-              exit 0
-            fi
-            echo "Waiting for frontend..."
+            curl -fsS http://localhost:5173 && exit 0
             sleep 2
           done
-          echo "Frontend did not become ready in time ❌" >&2
+          echo "Frontend did not become ready in time" >&2
           docker compose logs frontend || true
           exit 1
 
@@ -176,32 +164,15 @@ jobs:
         with:
           node-version: 20
 
-      - name: Cache Cypress binary
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/Cypress
-          key: cypress-cache-${{ runner.os }}-${{ hashFiles('Frontend/package-lock.json') }}
-          restore-keys: |
-            cypress-cache-
-
-      - name: Fix permissions for Frontend folder (e2e)
-        working-directory: Frontend
-        run: sudo chown -R "$USER:$USER" .
-
-      - name: Install dependencies + Cypress
+      - name: Install Cypress
         working-directory: Frontend
         run: |
           npm ci
           npx cypress install
 
-      # =========================
-      # Run only A2–A4, C1–C6
-      # =========================
-      - name: Run Cypress (only stable specs)
+      - name: Run Cypress
         working-directory: Frontend
-        run: |
-          npx cypress run --headless \
-            --spec cypress/e2e/Success/A0-e2e.cy.js
+        run: npx cypress run --headless
 
       - name: Upload E2E Artifacts
         if: always()
@@ -211,7 +182,6 @@ jobs:
           path: |
             Frontend/cypress/videos
             Frontend/cypress/screenshots
-          if-no-files-found: ignore
 
       - name: Shutdown
         if: always()
