--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,7 +106,7 @@ jobs:
             1tsh4dowz/devops-frontend:latest
 
   # =========================
-  # E2E + Cypress (ยังรันแต่ไม่ fail workflow)
+  # E2E + Cypress (ไม่ทำให้ workflow fail)
   # =========================
   e2e:
     runs-on: ubuntu-latest
@@ -190,21 +190,19 @@ jobs:
           npm ci
           npx cypress install
 
-      # =========================
-      # Run only A2–A4, C1–C6
-      # =========================
+      # รันเฉพาะ A2–A4, C1–C6
       - name: Run Cypress (only stable specs)
         working-directory: Frontend
         run: |
-          npx cypress run --headless \
-            --spec cypress/e2e/Success/A2-creating-event-organizationmnge.cy.js \
-            --spec cypress/e2e/Success/A3-creating-event-eventdetail.cy.js \
-            --spec cypress/e2e/Success/A4-creating-event-ticketdetail.cy.js \
-            --spec cypress/e2e/Success/C1-buying-ticket-landding.cy.js \
-            --spec cypress/e2e/Success/C2-buying-ticket-signin.cy.js \
-            --spec cypress/e2e/Success/C3-buying-ticket-login.cy.js \
-            --spec cypress/e2e/Success/C4-buying-ticket-eventselect.cy.js \
-            --spec cypress/e2e/Success/C5-buying-ticket-Profile.cy.js \
+          npx cypress run --headless ^
+            --spec cypress/e2e/Success/A2-creating-event-organizationmnge.cy.js ^
+            --spec cypress/e2e/Success/A3-creating-event-eventdetail.cy.js ^
+            --spec cypress/e2e/Success/A4-creating-event-ticketdetail.cy.js ^
+            --spec cypress/e2e/Success/C1-buying-ticket-landding.cy.js ^
+            --spec cypress/e2e/Success/C2-buying-ticket-signin.cy.js ^
+            --spec cypress/e2e/Success/C3-buying-ticket-login.cy.js ^
+            --spec cypress/e2e/Success/C4-buying-ticket-eventselect.cy.js ^
+            --spec cypress/e2e/Success/C5-buying-ticket-Profile.cy.js ^
             --spec cypress/e2e/Success/C6-buying-ticket-checkin.cy.js
 
       - name: Upload E2E Artifacts
@@ -220,3 +218,21 @@ jobs:
       - name: Shutdown
         if: always()
         run: docker compose down -v
+
+  # =========================
+  # CD: Deploy to local Docker Desktop Kubernetes (self-hosted runner)
+  # =========================
+  deploy-local:
+    runs-on: self-hosted
+    needs: [ docker-backend, docker-frontend ]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check current kube context
+        run: |
+          kubectl config current-context
+          kubectl get nodes
+
+      - name: Apply Kubernetes manifests
+        run: |
+          kubectl apply -f k8s/
