--- a/Backend/src/main/resources/application-test.yml
+++ b/Backend/src/main/resources/application-test.yml
@@ -14,6 +14,10 @@ spring:
       hibernate:
         format_sql: true
 
+  h2:
+    console:
+      enabled: true
+
   flyway:
     enabled: false
 
